Issue #18458: Prevent crashes with newer versions of libedit.  Its readline emulation has changed from 0-based indexing to 1-based like gnu readline. Original patch by Ronald Oussoren.